<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">
    
    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/Txt_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/eliminar_imagen"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_si"
            android:text="@string/Btn_si"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_no"
            android:text="@string/Btn_no"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>



    </androidx.appcompat.widget.LinearLayoutCompat>






</androidx.appcompat.widget.LinearLayoutCompat>