<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/Txt_editar_p"
            android:text="@string/Txt_editar_p"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Imagen de perfil-->
        <RelativeLayout
            android:id="@+id/perfilRl"
            android:layout_below="@+id/Txt_editar_p"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/img_perfil"
                android:src="@drawable/img_perfil"
                android:scaleType="centerCrop"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABCambiarImg"
                android:layout_alignParentEnd="true"
                app:fabSize="mini"
                android:src="@drawable/ic_select_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <!-- Nombres -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/perfilRl"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp">

            <EditText
                android:id="@+id/Et_nombres"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_nombres"/>



        </com.google.android.material.textfield.TextInputLayout>

        <!-- Fecha de nac -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_Nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TILNombres"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp">

            <EditText
                android:id="@+id/Et_f_nac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_f_nac"/>


        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cód + teléfono -->
        <RelativeLayout
            android:id="@+id/RL_Cod_Tel"
            android:layout_below="@+id/TIL_Nac"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hbb20.CountryCodePicker
                android:id="@+id/selector_Cod"
                android:gravity="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_rememberLastSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Número telefónico -->
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/selector_Cod"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/Et_telefono"
                    android:hint="@string/Et_telefono"

                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            </com.google.android.material.textfield.TextInputLayout>





        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_actualizar"
            android:layout_below="@id/RL_Cod_Tel"
            android:layout_marginTop="15dp"
            app:icon="@drawable/ic_editar"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:text="@string/Btn_actualizar"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"/>


    </RelativeLayout>

</RelativeLayout>